code/force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/FinServ__AssetsAndLiabilitiesSource__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AssetsAndLiabilitiesSource__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yodlee</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>