code/force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/FinServ__Household__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household that this asset or liability rolls up to.</description>
    <label>Household</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Assets and Liabilities</relationshipLabel>
    <relationshipName>HouseholdAssetsAndLiabilities</relationshipName>
    <type>Lookup</type>
</CustomField>