code/force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/FinServ__JointOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__JointOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Owner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesIndividual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Joint Owner</relationshipLabel>
    <relationshipName>JointOwner</relationshipName>
    <type>Lookup</type>
</CustomField>